package com.leo.principles.p1_OpenClosePrinciple;

/**
 * @author leijiong
 * @version 1.0
 */
public abstract class AbstractSkin {

   public abstract void display();
}
