package com.leo.principles.p1_OpenClosePrinciple;

/**
 * @author leijiong
 * @version 1.0
 */
public class DefaultSpecificSkin extends AbstractSkin {
    @Override
    public void display() {
        System.out.println("默认皮肤");
    }
}
