package com.leo.principles.p1_OpenClosePrinciple;

/**
 * @author leijiong
 * @version 1.0
 */
public class LeiSpecificSkin extends AbstractSkin {
    @Override
    public void display() {
        System.out.println("lei皮肤");
    }
}
